# PicoConfigurator

./: .gitignore  Cargo.toml  README.md  build.rs  resource.rc
src/: lib.rs  main.rs  old.rs  recovery.rs
src/modules/: gui.rs
src/structs/: Config.rs  Configurator.rs  mod.rs
src/util/: mod.rs  pretty_json.rs
