[package]
name = "picoconfigurator"
version = "0.1.0"
edition = "2021"


[dependencies]
winres = "^0.1"
image = "^0.25"
eframe = "^0.28"
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "^1.0"

[bundle]
icon = "icon.icns"  # For macOS

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"