[package]
name = "picoconfigurator"
version = "0.1.0"
edition = "2021"


[dependencies]
image = "^0.25"
eframe = "^0.28"
json = "^0.12"
open = "^5.3"
indexmap = { version = "^2.5", features = ["serde"] }

[bundle]
icon = "icon.icns"  # For macOS

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"